<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notetifications</string>
    <string name="action_settings">Settings</string>
    <string name="action_close">Close</string>
    <string name="action_mynote">My notetifications</string>
    <string name="action_help">Help</string>
    <string name="action_contact">Contact</string>
    <string name="welcome">Welcome to notetifications! From here, you will be able to create a notification as a note. The faster and easier way!</string>
    <string name="editNotifTitle">Notetification title</string>
    <string name="editNotif">Notetification content</string>
    <string name="left" translatable="false">&lt;</string>
    <string name="right" translatable="false">></string>
    <string name="persist">Does it persist?</string>
    <string name="button_setNotif">Create notetification</string>
    <string name="madeBy">App made by Lonami - ©LonamiWebs 2013</string>
    <string name="notifCreated">Notetification made successfully</string>
    <string name="title_activity_notif_manager">My notetifications</string>
    <string name="gallery">Pick image from gallery</string>
    <string name="title_activity_settings">Settings</string>
    <string name="remPers">Remove ongoing notifications</string>
    <string name="visitlw">Visit author\'s webpage</string>
    <string name="autoCancel">Autocancel?</string>
    <string name="setPers">Are you sure? To remove these notetifications, you have to close the app or remove\'em all from settings.</string>
    <string name="setPersTitle">Caution!</string>
    <string name="yeh">Yes, I\'m sure</string>
    <string name="nay">No, cancel</string>
    <string name="remNot">Are you sure? This will remove every notetifications you\'ve created from notification bar!</string>
    <string name="checkShowAlways">Show always in notification bar?</string>
    <string name="showNotif">Show notetification</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="hideNotif">Hide notetification</string>

    <!-- pfk stands for preference file key -->
    <string name="pfk_showInTaskBar" translatable="false">lowe.lonamiwebs.notetifications.SHOW_IN_TASK_BAR</string>
    <string name="pfk_sitbTitle">Create notetification</string>
    <string name="pfk_sitbContent">Create new notetification now!</string>

    <string-array name="spinner_notifIcon" translatable="false">
		<item>about</item>
		<item>accept</item>
		<item>accounts</item>
		<item>add</item>
		<item>add_alarm</item>
		<item>add_group</item>
		<item>add_person</item>
		<item>add_to_queue</item>
		<item>airplane_mode_off</item>
		<item>airplane_mode_on</item>
		<item>alarms</item>
		<item>attachment</item>
		<item>back</item>
		<item>backspace</item>
		<item>bad</item>
		<item>battery</item>
		<item>bightness_low</item>
		<item>bluetooth</item>
		<item>bluetooth_connected</item>
		<item>bluetooth_searching</item>
		<item>brightness_auto</item>
		<item>brightness_high</item>
		<item>brightness_medium</item>
		<item>call</item>
		<item>camera</item>
		<item>cancel</item>
		<item>cast</item>
		<item>cc_bcc</item>
		<item>chat</item>
		<item>cloud</item>
		<item>collapse</item>
		<item>collection</item>
		<item>computer</item>
		<item>copy</item>
		<item>crop</item>
		<item>cut</item>
		<item>data_usage</item>
		<item>dial_pad</item>
		<item>directions</item>
		<item>discard</item>
		<item>dock</item>
		<item>download</item>
		<item>edit</item>
		<item>email</item>
		<item>end_call</item>
		<item>error</item>
		<item>event</item>
		<item>expand</item>
		<item>facebook</item>
		<item>fast_forward</item>
		<item>favorite</item>
		<item>flash_automatic</item>
		<item>flash_off</item>
		<item>flash_on</item>
		<item>forward</item>
		<item>full_screen</item>
		<item>gamepad</item>
		<item>go_to_today</item>
		<item>good</item>
		<item>group</item>
		<item>half_important</item>
		<item>headphones</item>
		<item>headset</item>
		<item>help</item>
		<item>import_export</item>
		<item>important</item>
		<item>instagram</item>
		<item>keyboard</item>
		<item>kik</item>
		<item>labels</item>
		<item>location_found</item>
		<item>location_off</item>
		<item>location_searching</item>
		<item>make_available_offline</item>
		<item>map</item>
		<item>merge</item>
		<item>mic</item>
		<item>mic_muted</item>
		<item>mouse</item>
		<item>network_cell</item>
		<item>network_wifi</item>
		<item>new_account</item>
		<item>new_attachment</item>
		<item>new_email</item>
		<item>new_event</item>
		<item>new_label</item>
		<item>new_picture</item>
		<item>next</item>
		<item>next_item</item>
		<item>not_important</item>
		<item>not_secure</item>
		<item>overflow</item>
		<item>paste</item>
		<item>pause</item>
		<item>pause_over_video</item>
		<item>person</item>
		<item>phone</item>
		<item>picture</item>
		<item>place</item>
		<item>play</item>
		<item>play_over_video</item>
		<item>previous</item>
		<item>previous_item</item>
		<item>read</item>
		<item>refresh</item>
		<item>remove</item>
		<item>repeat</item>
		<item>replay</item>
		<item>reply</item>
		<item>reply_all</item>
		<item>return_from_full_screen</item>
		<item>rewind</item>
		<item>ring_volume</item>
		<item>rotate_left</item>
		<item>rotate_right</item>
		<item>save</item>
		<item>screen_locked_to_landscape</item>
		<item>screen_locked_to_portrait</item>
		<item>screen_rotation</item>
		<item>sd_storage</item>
		<item>search</item>
		<item>secure</item>
		<item>select_all</item>
		<item>send_now</item>
		<item>settings</item>
		<item>share</item>
		<item>shuffle</item>
		<item>skype</item>
		<item>skype_msg</item>
		<item>slideshow</item>
		<item>snapchat_multiple</item>
		<item>snapchat_single</item>
		<item>sort_by_size</item>
		<item>split</item>
		<item>stop</item>
		<item>storage</item>
		<item>switch_camera</item>
		<item>switch_video</item>
		<item>telegram</item>
		<item>time</item>
		<item>tuenti</item>
		<item>twitter</item>
		<item>undo</item>
		<item>unread</item>
		<item>upload</item>
		<item>usb</item>
		<item>video</item>
		<item>view_as_grid</item>
		<item>view_as_list</item>
		<item>volume_muted</item>
		<item>volume_on</item>
		<item>warning</item>
		<item>web_site</item>
		<item>whatsapp</item>
    </string-array>

    <string name="deleteAll">Delete all</string>
    <string name="showAll">Show all</string>
    <string name="hideAll">Hide all</string>

    <string name="imageDesc">Background</string>
    <string name="imageNotif">Notification Icon</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_edit_notif">Edit notetification</string>

</resources>
