<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="tk.lonamiwebs.notetifications.EditNotifActivity">


    <EditText
        android:id="@+id/edit_notifTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editNotifTitle" />

    <EditText
        android:id="@+id/edit_notif"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editNotif" />

    <Spinner
        android:id="@+id/spinner_notifIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageDesc"
                android:src="@drawable/black" />

            <ImageView
                android:id="@+id/imageViewIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/imageNotif"
                android:src="@drawable/add" />

        </RelativeLayout>


        <Button
            android:id="@+id/buttonMore"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:onClick="increaseIndex"
            android:text="@string/right"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/display"
            android:layout_alignRight="@+id/display"
            android:layout_alignEnd="@+id/display" />

        <Button
            android:id="@+id/buttonLess"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:onClick="decreaseIndex"
            android:text="@string/left"
            android:layout_below="@+id/display" />

        <CheckBox
            android:id="@+id/checkPersist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/persist"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <CheckBox
            android:id="@+id/checkCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoCancel"
            android:layout_below="@+id/checkPersist"
            android:layout_alignLeft="@+id/checkPersist"
            android:layout_alignStart="@+id/checkPersist"
            android:checked="false" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/buttonMore"
            android:layout_toEndOf="@+id/buttonMore"
            android:layout_below="@+id/checkCancel" >

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <Button
            android:id="@+id/buttonShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/showNotif"
            android:onClick="showNotif"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonHide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hideNotif"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="hideNotif"
            android:layout_weight="1" />

        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancelB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="cancelB" />
        <Button
            android:id="@+id/deleteB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:onClick="deleteB"
            android:layout_toRightOf="@+id/cancelB"
            android:layout_toEndOf="@+id/cancelB"
            android:layout_toLeftOf="@+id/acceptB"
            android:layout_toStartOf="@+id/acceptB"/>
        <Button
            android:id="@+id/acceptB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:onClick="acceptB"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
        </RelativeLayout>

</LinearLayout>
    </ScrollView>
