<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome" />

        <EditText
            android:id="@+id/edit_notifTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editNotifTitle" />

        <EditText
            android:id="@+id/edit_notif"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editNotif" />

        <Spinner
            android:id="@+id/spinner_notifIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageViewBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/imageDesc"
                    android:src="@drawable/black" />

                <ImageView
                    android:id="@+id/imageViewIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/imageNotif"
                    android:src="@drawable/add" />

                </RelativeLayout>


            <Button
                android:id="@+id/buttonMore"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:onClick="increaseIndex"
                android:text="@string/right"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/display"
                android:layout_alignRight="@+id/display"
                android:layout_alignEnd="@+id/display" />

            <Button
                android:id="@+id/buttonLess"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:onClick="decreaseIndex"
                android:text="@string/left"
                android:layout_below="@+id/display" />

            <CheckBox
                android:id="@+id/checkPersist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkPersist"
                android:text="@string/persist"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <CheckBox
                android:id="@+id/checkCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autoCancel"
                android:layout_below="@+id/checkPersist"
                android:layout_alignLeft="@+id/checkPersist"
                android:layout_alignStart="@+id/checkPersist"
                android:checked="false" />

        </RelativeLayout>

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_setNotif"
            android:onClick="setNotif" />

    </LinearLayout>

</ScrollView>