<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="tk.lonamiwebs.notetifications.SettingsActivity">

    <CheckBox
        android:id="@+id/checkShowInBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkShowAlways"
        android:onClick="showInBar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/buttonVisitlw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitlw"
            android:onClick="goLw" />

        <Button android:id="@+id/support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_contact"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="contact" />

        </RelativeLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/madeBy" />

</LinearLayout>